force-app/main/default/objects/Plan_Comparison__c/Plan_Comparison__c.object-meta.xml
<CustomObject>
    <description>Stores a saved plan comparison session — settings, usage, and a unique retrieval ID.</description>
    <label>Plan Comparison</label>
    <nameField>
        <displayFormat>CMP-{0000}</displayFormat>
        <label>Comparison Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Comparisons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>