force-app/main/default/objects/Plan_Comparison__c/fields/Comparison_Id__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Id__c</fullName>
    <description>Unique 6-character alphanumeric code for retrieval.</description>
    <externalId>true</externalId>
    <label>Comparison Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>