force-app/main/default/objects/Plan_Comparison__c/fields/Premium_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Premium_Frequency__c</fullName>
    <description>How often the premium is deducted.</description>
    <label>Premium Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>semimonthly</fullName>
                <label>Semi-Monthly</label>
            </value>
            <value>
                <fullName>biweekly</fullName>
                <label>Bi-Weekly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>