force-app/main/default/objects/Plan_Comparison__c/fields/Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bracket__c</fullName>
    <description>Federal tax bracket percentage.</description>
    <label>Tax Bracket</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>