force-app/main/default/objects/Plan_Comparison__c/fields/Usage_ER__c.field-meta.xml
<CustomField>
    <fullName>Usage_ER__c</fullName>
    <description>Expected ER visits per year.</description>
    <label>Usage ER</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>