force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Generic_Rx__c.field-meta.xml
<CustomField>
    <fullName>Usage_Generic_Rx__c</fullName>
    <description>Expected generic Rx fills per year.</description>
    <label>Usage Generic Rx</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>