force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Inpatient__c.field-meta.xml
<CustomField>
    <fullName>Usage_Inpatient__c</fullName>
    <description>Expected inpatient admissions per year.</description>
    <label>Usage Inpatient</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>