force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Usage_Mental_Health__c</fullName>
    <description>Expected mental health visits per year.</description>
    <label>Usage Mental Health</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>