force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Non_Preferred_Rx__c.field-meta.xml
<CustomField>
    <fullName>Usage_Non_Preferred_Rx__c</fullName>
    <description>Expected non-preferred Rx fills per year.</description>
    <label>Usage Non Preferred Rx</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>