force-app/main/default/objects/Plan_Comparison__c/fields/Usage_PCP__c.field-meta.xml
<CustomField>
    <fullName>Usage_PCP__c</fullName>
    <description>Expected PCP visits per year.</description>
    <label>Usage PCP</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>