force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Prenatal__c.field-meta.xml
<CustomField>
    <fullName>Usage_Prenatal__c</fullName>
    <description>Expected prenatal care visits per year.</description>
    <label>Usage Prenatal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>