force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Preventive__c.field-meta.xml
<CustomField>
    <fullName>Usage_Preventive__c</fullName>
    <description>Expected preventive care visits per year.</description>
    <label>Usage Preventive</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>