force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Usage_Specialist__c</fullName>
    <description>Expected specialist visits per year.</description>
    <label>Usage Specialist</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>