force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Specialty_Rx__c.field-meta.xml
<CustomField>
    <fullName>Usage_Specialty_Rx__c</fullName>
    <description>Expected specialty Rx fills per year.</description>
    <label>Usage Specialty Rx</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>