force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Urgent_Care__c.field-meta.xml
<CustomField>
    <fullName>Usage_Urgent_Care__c</fullName>
    <description>Expected urgent care visits per year.</description>
    <label>Usage Urgent Care</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>