force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Virtual_Primary__c.field-meta.xml
<CustomField>
    <fullName>Usage_Virtual_Primary__c</fullName>
    <description>Expected virtual primary care visits per year.</description>
    <label>Usage Virtual Primary</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>