force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Virtual_Urgent__c.field-meta.xml
<CustomField>
    <fullName>Usage_Virtual_Urgent__c</fullName>
    <description>Expected virtual urgent care visits per year.</description>
    <label>Usage Virtual Urgent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>