force-app/main/default/objects/Plan_Comparison__c/fields/Usage_Xray_Lab__c.field-meta.xml
<CustomField>
    <fullName>Usage_Xray_Lab__c</fullName>
    <description>Expected X-Ray / Lab Work visits per year.</description>
    <label>Usage Xray Lab</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>