force-app/main/default/objects/Plan_Comparison__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mode__c</columns>
    <columns>Tax_Bracket__c</columns>
    <columns>Comparison_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>